# stitch

./: .git-blame-ignore-revs  Cargo.toml
.github/workflows/: clippy.yml  test.yml
data/basic/: simple10.json  simple11.json  simple12.json  simple13.json  simple14.json  simple15.json  simple16.json  simple17.json  simple18.json  simple19.json  simple20.json  simple21.json  simple6.json  simple7.json  simple8.json  simple9.json
data/dc/: arc_1.json  arc_2.json  arc_3.json  list_with_revs.json
data/expected_outputs/: arc_1-a3-i0.json  arc_2-a3-i0.json  arc_3-a3-i0.json  bridge-a2-i10.json  dials-a2-i10.json  furniture-a2-i10.json  list_with_revs_1-a3-i10.json  list_with_revs_2-a3-i10.json  list_with_revs_3-a3-i0.json  logo_iteration_1-a3-i10.json  nuts-bolts-a3-i10.json  origami_0-a3-i10.json  origami_1-a3-i10.json  origami_2-a3-i10.json  simple10-a2-i1.json  simple11-a2-i1.json  simple12-a2-i1.json  simple13-a2-i1.json  simple14-a2-i1.json  simple15-a2-i1.json  simple16-a3-i1.json  simple17-a3-i1.json  simple18-a3-i1.json  simple19-a3-i1.json  simple20-a3-i1.json  simple21-a3-i2.json  simple6-a1-i1.json  simple6-a2-i1.json  simple7-a2-i1.json  simple8-a1-i1.json  simple9-a1-i1.json  simple9-a2-i1.json  wheels-a2-i10.json
src/: compression.rs  egraphs.rs  formats.rs  lib.rs  rewriting.rs  util.rs
tests/: integration_tests.rs
